--- a/main/pages/music_pages/template.html
+++ b/main/pages/music_pages/template.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="description" content="">
     <title>NameOfTheSong</title>
-    <link rel="stylesheet" href="main\styles\main.css">
+    <link rel="stylesheet" href="../../styles/main.css">
 </head>
 <body>
     <!-- Uzupelnij meta tagi -->
