--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="description" content="Homepage of the roundedsounds">
     <title>Homepage</title>
     <link rel="stylesheet" href="main\styles/index.css">
+
 </head>
 <body>
     
@@ -134,6 +135,6 @@
 
         
     </div>
-
+    <script src="scripts/main.js"></script>
 </body>
 </html>
