--- a/index.html
+++ b/index.html
@@ -135,6 +135,6 @@
 
         
     </div>
-    <script src="scripts/main.js"></script>
+    <script src="scripts/main.js" type="module"></script>
 </body>
 </html>
