--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <div class="container__musicHolder__content">
             <div class="container__musicHolder__content__holder">
                 <div class="container__musicHolder__content__holder__frame">
-                    <img src="/images/paintedDreams_UnlikePluto.jpg" alt="thumbnail" class="container__musicHolder__content__holder__frame__image">
+                    <img src="https://picsum.photos/seed/picsum/200/300" alt="thumbnail" class="container__musicHolder__content__holder__frame__image">
                 </div>
                 <div class="container__musicHolder__content__holder__title"><h2>Painted Dreams</h2></div>
                 <div class="container__musicHolder__content__holder__author">Unlike Pluto</div>
@@ -65,7 +65,7 @@
 
             <div class="container__musicHolder__content__holder">
                 <div class="container__musicHolder__content__holder__frame">
-                    <img src="/images/paintedDreams_UnlikePluto.jpg" alt="thumbnail" class="container__musicHolder__content__holder__frame__image">
+                    <img src="https://picsum.photos/seed/picsum/110" alt="thumbnail" class="container__musicHolder__content__holder__frame__image">
                 </div>
                 <div class="container__musicHolder__content__holder__title"><h2>Painted Dreams</h2></div>
                 <div class="container__musicHolder__content__holder__author">Unlike Pluto</div>
@@ -73,7 +73,7 @@
 
             <div class="container__musicHolder__content__holder">
                 <div class="container__musicHolder__content__holder__frame">
-                    <img src="/images/paintedDreams_UnlikePluto.jpg" alt="thumbnail" class="container__musicHolder__content__holder__frame__image">
+                    <img src="https://picsum.photos/seed/picsum/110" alt="thumbnail" class="container__musicHolder__content__holder__frame__image">
                 </div>
                 <div class="container__musicHolder__content__holder__title"><h2>Painted Dreams</h2></div>
                 <div class="container__musicHolder__content__holder__author">Unlike Pluto</div>
@@ -81,7 +81,7 @@
 
             <div class="container__musicHolder__content__holder">
                 <div class="container__musicHolder__content__holder__frame">
-                    <img src="/images/paintedDreams_UnlikePluto.jpg" alt="thumbnail" class="container__musicHolder__content__holder__frame__image">
+                    <img src="https://picsum.photos/seed/picsum/110" alt="thumbnail" class="container__musicHolder__content__holder__frame__image">
                 </div>
                 <div class="container__musicHolder__content__holder__title"><h2>Painted Dreams</h2></div>
                 <div class="container__musicHolder__content__holder__author">Unlike Pluto</div>
@@ -89,7 +89,7 @@
 
             <div class="container__musicHolder__content__holder">
                 <div class="container__musicHolder__content__holder__frame">
-                    <img src="/images/paintedDreams_UnlikePluto.jpg" alt="thumbnail" class="container__musicHolder__content__holder__frame__image">
+                    <img src="https://picsum.photos/seed/picsum/110" alt="thumbnail" class="container__musicHolder__content__holder__frame__image">
                 </div>
                 <div class="container__musicHolder__content__holder__title"><h2>Painted Dreams</h2></div>
                 <div class="container__musicHolder__content__holder__author">Unlike Pluto</div>
@@ -97,7 +97,7 @@
 
             <div class="container__musicHolder__content__holder">
                 <div class="container__musicHolder__content__holder__frame">
-                    <img src="/images/paintedDreams_UnlikePluto.jpg" alt="thumbnail" class="container__musicHolder__content__holder__frame__image">
+                    <img src="https://picsum.photos/seed/picsum/110" alt="thumbnail" class="container__musicHolder__content__holder__frame__image">
                 </div>
                 <div class="container__musicHolder__content__holder__title"><h2>Painted Dreams</h2></div>
                 <div class="container__musicHolder__content__holder__author">Unlike Pluto</div>
