--- a/main/pages/music_pages/searchfor.html
+++ b/main/pages/music_pages/searchfor.html
@@ -48,16 +48,27 @@
         </div>
 
         <div class="container__holder">
-            <form action="" method="post" class="container__holder__form">
+            <form method="post" class="container__holder__form" id="form">
 
-                <label for="artist" class="container__holder__form__label">Arist</label>
-                <input type="text" name="artist" id="artist" class="container__holder__form__label__input">
+                <label for="artist" class="container__holder__form__label">Artist
+                    <input type="text" name="artist" id="artist" class="container__holder__form__label__input">
+                </label>
 
-                <label for="title" class="container__holder__form__label">Title</label>
-                <input type="text" name="title" id="title" class="container__holder__form__label__input">
+                <label for="title" class="container__holder__form__label">Title
+                    <input type="text" name="title" id="title" class="container__holder__form__label__input">
+                </label>
 
-                <input type="submit" value="Search" class="container__holder__form__submit">
+                <div class="container__holder__form__submitH">
+                    <input type="submit" value="Search" class="container__holder__form__submitH__submit">
+                </div>
             </form>
+
+            <div class="container__holder__content">
+
+
+            </div>
+
+
         </div>
 
     <div class="container__wave">
