--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     </li>
 
                     <li class="container__header__menu__list__element">
-                        <a href="/main/pages/music_pages/searchfor.html" class="container__header__menu__list__element__link">Search For</a>
+                        <a href="../main/pages/music_pages/searchfor.html" class="container__header__menu__list__element__link">Search For</a>
                     </li>
 
                 </ul>
@@ -123,9 +123,9 @@
 
     <div class="container__footer">
         <div class="container__footer__media">
-            <a href=""><img src="RoundedSoundsPlain/svg/youtube-svgrepo-com.svg" class="container__footer__media__logo" alt="youtube"></a>
-            <a href=""><img src="RoundedSoundsPlain/svg/instagram-svgrepo-com.svg" class="container__footer__media__logo" alt="instagram"></a>
-            <a href=""><img src="RoundedSoundsPlain/svg/twitter-svgrepo-com.svg" class="container__footer__media__logo" alt="twitter"></a>
+            <a href=""><img src="/svg/youtube-svgrepo-com.svg" class="container__footer__media__logo" alt="youtube"></a>
+            <a href=""><img src="/svg/instagram-svgrepo-com.svg" class="container__footer__media__logo" alt="instagram"></a>
+            <a href=""><img src="/svg/twitter-svgrepo-com.svg" class="container__footer__media__logo" alt="twitter"></a>
         </div>
     
 
