--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     </li>
 
                     <li class="container__header__menu__list__element">
-                        <a href="../main/pages/music_pages/searchfor.html" class="container__header__menu__list__element__link">Search For</a>
+                        <a href="main/pages/music_pages/searchfor.html" class="container__header__menu__list__element__link">Search For</a>
                     </li>
 
                 </ul>
