--- a/main/pages/music_pages/searchfor.html
+++ b/main/pages/music_pages/searchfor.html
@@ -12,7 +12,7 @@
         <div class="container__header">
 
             <div class="container__header__logo">
-                <img src="images/Logo_White.png" alt="Logo" class="container__header__logo__image" style="width:200px; height:200px;">
+                <img src="../../../images/Logo_White.png" alt="Logo" class="container__header__logo__image" style="width:200px; height:200px;">
             </div>
             
             <div class="container__header__menu">
@@ -20,7 +20,7 @@
                 <ul class="container__header__menu__list">
 
                     <li class="container__header__menu__list__element">
-                        <a href="index.html" class="container__header__menu__list__element__link">Homepage</a>
+                        <a href="../../../index.html" class="container__header__menu__list__element__link">Homepage</a>
                     </li>
 
                     <li class="container__header__menu__list__element">
@@ -28,7 +28,7 @@
                     </li>
 
                     <li class="container__header__menu__list__element">
-                        <a href="main/pages/music_pages/searchfor.html" class="container__header__menu__list__element__link">Search For</a>
+                        <a href="searchfor.html" class="container__header__menu__list__element__link">Search For</a>
                     </li>
 
                 </ul>
