--- a/main/pages/music_pages/searchfor.html
+++ b/main/pages/music_pages/searchfor.html
@@ -84,9 +84,9 @@
 
     <div class="container__footer">
         <div class="container__footer__media">
-            <a href=""><img src="svg/youtube-svgrepo-com.svg" class="container__footer__media__logo" alt="youtube"></a>
-            <a href=""><img src="svg/instagram-svgrepo-com.svg" class="container__footer__media__logo" alt="instagram"></a>
-            <a href=""><img src="svg/twitter-svgrepo-com.svg" class="container__footer__media__logo" alt="twitter"></a>
+            <a href=""><img src="../../../svg/youtube-svgrepo-com.svg" class="container__footer__media__logo" alt="youtube"></a>
+            <a href=""><img src="../../../svg/instagram-svgrepo-com.svg" class="container__footer__media__logo" alt="instagram"></a>
+            <a href=""><img src="../../../svg/twitter-svgrepo-com.svg" class="container__footer__media__logo" alt="twitter"></a>
         </div>
     
 
