--- a/index.html
+++ b/index.html
@@ -3,14 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="description" content="Homepage of the roundedsounds">
+    <link rel="icon" href="images/Logo_White.png">
     <title>Homepage</title>
     <link rel="stylesheet" href="main\styles/index.css">
+    
 
 </head>
 <body>
     
     <div class="container">
-        <div class="container__header">
+        <header class="container__header">
 
             <div class="container__header__logo">
                 <img src="images/Logo_White.png" alt="Logo" class="container__header__logo__image" style="width:200px; height:200px;">
@@ -39,7 +41,7 @@
                 <span>Round Sound is a innovative music app that let you listen to music anywhere in the world in the best quality!</span>
             </div>
 
-        </div>
+        </header>
 
 
         <div class="container__wave">
