--- a/main/pages/music_pages/template.html
+++ b/main/pages/music_pages/template.html
@@ -5,6 +5,7 @@
     <meta name="description" content="">
     <title>Song</title>
     <link rel="stylesheet" href="../../styles/template.css">
+    <link rel="icon" href="../../../images/Logo_White.png">
 </head>
 <body>
     
@@ -103,6 +104,6 @@
 
         
     </div>
-    <script src="scripts/template.js"></script>
+    <script src="../../../scripts/template.js"></script>
 </body>
 </html>
