final push prob

--- a/main/pages/music_pages/searchfor.html
+++ b/main/pages/music_pages/searchfor.html
@@ -10,7 +10,7 @@
 <body>
     
     <div class="container">
-        <div class="container__header">
+        <header class="container__header">
 
             <div class="container__header__logo">
                 <img src="../../../images/Logo_White.png" alt="Logo" class="container__header__logo__image" style="width:200px; height:200px;">
@@ -35,7 +35,7 @@
                 </ul>
             </div>
 
-        </div>
+        </header>
 
 
         <div class="container__wave">
@@ -48,7 +48,7 @@
 
         </div>
 
-        <div class="container__holder">
+        <main class="container__holder">
             <form method="post" class="container__holder__form" id="form">
 
                 <label for="artist" class="container__holder__form__label">Artist
@@ -70,7 +70,7 @@
             </div>
 
 
-        </div>
+        </main>
 
     <div class="container__wave">
 
@@ -83,7 +83,7 @@
 
     </div>
 
-    <div class="container__footer">
+    <footer class="container__footer">
         <div class="container__footer__media">
             <a href=""><img src="../../../svg/youtube-svgrepo-com.svg" class="container__footer__media__logo" alt="youtube"></a>
             <a href=""><img src="../../../svg/instagram-svgrepo-com.svg" class="container__footer__media__logo" alt="instagram"></a>
@@ -94,7 +94,7 @@
         <div class="container__footer__copyright">
             <p>&copy;Copyright by Fargo5 </p>
         </div>
-    </div>
+    </footer>
 
         
     </div>
