--- a/main/pages/music_pages/template.html
+++ b/main/pages/music_pages/template.html
@@ -25,7 +25,7 @@
                     </li>
 
                     <li class="container__header__menu__list__element">
-                        <a href="" class="container__header__menu__list__element__link">RoundSound</a>
+                        <a href="time_date.html" class="container__header__menu__list__element__link">Time And Date</a>
                     </li>
 
                     <li class="container__header__menu__list__element">
@@ -57,7 +57,7 @@
                         <figure class="container__musicHolder__content__holder__frame">
                             <img src="https://picsum.photos/seed/picsum/110" alt="thumbnail" class="container__musicHolder__content__holder__frame__image">
                         </figure>
-                        <p class="container__musicHolder__content__holder__title"><h2>Painted Dreams</h2></p>
+                        <div class="container__musicHolder__content__holder__title"><h2>Painted Dreams</h2></div>
                         <p class="container__musicHolder__content__holder__author">Unlike Pluto</p>
                     </section>
                 </section>
