--- a/main/pages/music_pages/time_date.html
+++ b/main/pages/music_pages/time_date.html
@@ -48,13 +48,13 @@
 
         </aside>
 
-        <main class="container__musicHolder">
-            <section class="container__musicHolder__clock">
-                <p class="container__musicHolder__clock__paragraph" id="clock">00:00:00</p>
+        <main class="container__timeHolder">
+            <section class="container__timeHolder__clock">
+                <p class="container__timeHolder__clock__paragraph" id="clock">00:00:00</p>
             </section>
 
-            <section class="container__musicHolder__date">
-                <p class="container__musicHolder__date__paragraph" id="date">00-00-0000</p>
+            <section class="container__timeHolder__date">
+                <p class="container__timeHolder__date__paragraph" id="date">00-00-0000</p>
             </section>
         </main>
 
